fix: hide y overflow when menu is closed

--- a/app/top-nav/top-nav.component.css
+++ b/app/top-nav/top-nav.component.css
@@ -4,9 +4,12 @@
     right: 0;
     z-index: 1999;
     height: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: hidden;
     background-color: transparent;
+}
+
+#menu-container.open {
+    overflow-y: auto;
 }
 
 #modal {
